# wdsparql

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.ipynb  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
tests/: test_endpoint.py
wdsparql/: __init__.py  exceptions.py  wdsparqlmagic.py
wdsparqlmagic/: __init__.py  wdsparqlmagic.py
