[metadata]
name = wdsparql
version = 0.0.1
author = David Davó
author_email = david@ddavo.me
description = Run Wikidata Sparql queries directly on your notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daviddavo/wdsparqlmagic
project_urls =
    Bug Tracker = https://github.com/daviddavo/wdsparqlmagic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Framework :: IPython

[options]
package_dir =
    wdsparql = wdsparql
packages = wdsparql
python_requires = >= 3.8
install_requires =
    requests >= 2.20
    ipython >= 8.0.0
    pandas >= 1.3