[metadata]
name = wdsparql
# Version from setuptools_scm
author = David Davó
author_email = david@ddavo.me
description = Run Wikidata Sparql queries directly on your notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daviddavo/wdsparqlmagic
project_urls =
    Bug Tracker = https://github.com/daviddavo/wdsparqlmagic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Framework :: IPython

[options]
package_dir =
    wdsparql = wdsparql
packages = wdsparql
python_requires = >= 3.6
install_requires =
    requests >= 2.20
    ipython >= 7.0.0
    pandas >= 1.1

[tox:tox]
envlist = py{36,37,38,39,310},mypy

[testenv]
deps = pytest
commands = pytest
wheel_build_env = build

[testenv:build]

[testenv:lint]
deps = flake8
commands =
    flake8 wdsparql

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310, mypy
